@@ -1,0 +1,19 @@
+<!-- start module_access_config_attribute_code.html -->
+<table border="0" cellpadding="3" cellspacing="0" width="100%" class="adminlist">
+  <thead>
+    <tr>
+      <th colspan="2">{ACCESS_ATTRIBUTE_CODE_TITLE}</th>
+    </tr>
+  </thead>
+  <tbody style="vertical-align:top;">
+    <tr class="row1">
+        <td>{TXT_ACCESS_ATTRIBUTE_CODE_DESC}</td>
+    </tr>
+    <tr class="row2">
+        <td><textarea rows="10" cols="10" style="width:100%; height:400px;">{ACCESS_ATTRIBUTE_CODE}</textarea></td>
+    </tr>
+  </tbody>
+</table>
+<br />
+<input type="button" onclick="window.location.href='index.php?cmd=access&act=config&tpl=attributes'" value="{TXT_ACCESS_BACK}" />
+<!-- end module_access_config_attribute_code.html -->
